pitches history z-index fix

--- a/web/src/components/atbat/Outcome2.module.css
+++ b/web/src/components/atbat/Outcome2.module.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     justify-content: center;
+    z-index: 2;
 }
 
 .contentWrap {
@@ -14,7 +15,7 @@
 .whiteSpace {
     background-color: white;
     flex: 1;
-    z-index: 4;
+    z-index: 2;
 }
 .content {
     flex: 1;
